# playtranslate

./: .gitignore  .gitmodules  README.md  settings.gradle.kts
.github/: FUNDING.yml
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/assets/: p5_100_ja.json  p5_500_ja.json
app/src/androidTest/java/com/playtranslate/: MlKitBatchTranslateTest.kt  QwenBatchTest.kt  TranslateGemmaBatchTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: langpack_catalog.json
app/src/main/java/com/gamelens/: CaptureService.kt  MainActivity.kt  OcrManager.kt  Prefs.kt  VersoAccessibilityService.kt
app/src/main/java/com/playtranslate/: AnkiManager.kt  CaptureService.kt  CaptureSession.kt  Classification.kt  DetectionLog.kt  DiacriticsOcrPreprocessing.kt  DisplayUtils.kt  FuriganaMode.kt  HotkeyDecision.kt  InAppOnlyMode.kt  LatinOcrPreprocessing.kt  LiveMode.kt  MainActivity.kt  OcrManager.kt  OcrPreprocessingRecipe.kt  OcrSeedWriter.kt  OneShotManager.kt  OneShotProcessor.kt  OverlayToolkit.kt  PinholeOverlayMode.kt  PlayTranslateAccessibilityService.kt  PlayTranslateApplication.kt  PlayTranslateTileService.kt  Prefs.kt  ProjectionOverlayHost.kt  RegionCoordinateMapper.kt  ScreenshotManager.kt  SimpleTranslationMode.kt  ThemeUtils.kt  TranslationOverlayMode.kt  VietnameseOcrPreprocessing.kt
app/src/main/res/color/: segmented_button_bg.xml  segmented_button_text.xml  switch_thumb.xml  switch_track.xml  switch_track_decoration.xml
app/src/main/res/drawable/: bg_anki_pill.xml  bg_hotkey_cancel_btn.xml  bg_keycap.xml  bg_link_row.xml  bg_popup_card.xml  ic_anki_cards.xml  ic_arrow_right.xml  ic_check.xml  ic_chevron_right.xml  ic_crop.xml  ic_delete.xml  ic_edit.xml  ic_exit_to_app.xml  ic_furigana.xml  ic_qs_tile.xml
app/src/main/res/layout/: activity_deepl_settings.xml  activity_main.xml  activity_translation_result.xml  anki_card_type_picker_row.xml  bottom_sheet_anki_review.xml  bottom_sheet_word_detail.xml  dialog_anki_card_type_picker.xml  dialog_anki_content_source_picker.xml  dialog_anki_deck_picker.xml  dialog_anki_field_mapping.xml  dialog_hotkey_setup.xml  dialog_language_progress.xml  dialog_settings.xml  dialog_word_detail.xml  fragment_sentence_anki_content.xml  fragment_translation_result.xml  item_region_row.xml  item_settings_link.xml  item_word_lookup.xml  language_list_row.xml  settings_footer.xml  settings_group_header.xml  settings_row_action.xml  settings_row_backend.xml  settings_row_divider.xml  settings_row_hotkey.xml  settings_row_info.xml  settings_row_link.xml  settings_row_section.xml  settings_row_switch.xml  settings_row_value.xml  settings_row_value_multiline.xml  sheet_add_custom_region.xml  sheet_region_picker.xml  sheet_word_anki_review.xml
app/src/main/res/menu/: menu_anki_field_mapping.xml
app/src/main/res/values/: colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/xml/: accessibility_service_config.xml
gradle/: gradle-daemon-jvm.properties  libs.versions.toml
llama/: build.gradle.kts
llama/src/main/cpp/: CMakeLists.txt  ai_chat.cpp
scripts/: build_en_dict.py  build_es_dict.py  build_hybrid_target_pack.py  build_jmdict.py  build_latin_dict.py  build_panlex_target_pack.py  build_target_pack.py  build_zh_dict.py  wiktionary_filters.py
tests/: test_build_jmdict.py
(+135 files in other folders)
